// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> props variant renders a longForm variant 1`] = `
.emotion-0 {
  font-family: Open Sans;
  line-height: 1.5;
  color: #222222;
  font-size: 1rem;
  margin-bottom: 1rem;
}

<p
  className="emotion-0 emotion-1"
  color=""
>
  Hello World
</p>
`;

exports[`<Text /> props variant renders a tiny variant 1`] = `
.emotion-0 {
  font-family: Open Sans;
  line-height: 1.5;
  color: #666666;
  font-size: 0.6875rem;
  margin-bottom: 0.6875rem;
}

<p
  className="emotion-0 emotion-1"
  color=""
>
  Hello World
</p>
`;

exports[`<Text /> props variant renders a ui variant 1`] = `
.emotion-0 {
  font-family: Open Sans;
  line-height: 1.5;
  color: #222222;
  font-size: 0.875rem;
  margin-bottom: 0.875rem;
}

<p
  className="emotion-0 emotion-1"
  color=""
>
  Hello World
</p>
`;
